Fixed mobile social container overflow

--- a/src/components/AboutMe.css
+++ b/src/components/AboutMe.css
@@ -43,9 +43,12 @@
 
 .social-container {
   margin-top: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
   display: flex;
   align-content: center;
   justify-content: center;
+  /* width: 1vw; */
 }
 .social-item {
   margin: 20px;
@@ -58,8 +61,9 @@
 }
 @media screen and (orientation: portrait) {
   .social-item {
-    height: 35px;
-    margin: 0.8px;
+    height: 33px;
+    width: 33px;
+    margin: 7.5px;
   }
   .hello-there {
     font-size: 2.3em;
